Alto DBFlute style uses DBFlute Intro

--- a/web/ja/introduction/altodbflute.html
+++ b/web/ja/introduction/altodbflute.html
@@ -75,373 +75,23 @@
 	</dl>
 
 	<h2 id="entry">導入の流れ</h2>
+	<h3 id="byintro">DBFlute Introでセットアップ</h3>
 	<p>
 		何をするにしても、DBFlute をセットアップするところからです。
 	</p>
 	<p>
-		そして、まずは気軽に利用できる SchemaHTML や HistoryHTML
-		のドキュメント自動生成から始め、徐々に ReplaceSchema などの環境を整えていくと良いでしょう。
-	</p>
-	<dl class="keymainlist">
-		<dt><a href="#setup">DBFluteのセットアップ</a></dt>
-		<dd>EMecha、もしくは、DBFlute Intro でダウンロードから設定など</dd>
-		<dt><a href="#document">まずは、ドキュメント生成</a></dt>
-		<dd>まずは、SchemaHTML (テーブル定義書) から作ってみる</dd>
-		<dt><a href="#replaceschema">ReplaceSchemaで自動化</a></dt>
-		<dd>とにかくDDLを用意して、ReplaceSchemaで環境構築の自動化</dd>
-	</dl>
-
-	<h2 id="setup">DBFluteのセットアップ</h2>
-	<h3 id="twoway">やり方は大きく二つ</h3>
-	<p>
-		セットアップには、大きく二つあります。
-	</p>
-	<dl class="valuemainlist">
-		<dt>Eclipse使っていれば</dt><dd><a href="../manual/function/helper/emecha/index.html">EMecha(Eclipseプラグイン)</a> からダウンロードとDB接続設定</dd>
-		<dt>Javaじゃないとかなら</dt><dd><a href="../manual/function/helper/intro/index.html">DBFlute Intro</a> を使ってGUIだけでセットアップから実行まで</dd>
-	</dl>
-	<h3 id="eclipseway">Eclipse使っていれば</h3>
-	<p>
-		Eclipseを使っているような環境であれば、まずは EMecha をインストールしてください。
-		単なるセットアップだけでなく、設定ファイルのエディター機能もあり、入れるに越したことはありません。
-	</p>
-	<p>
-		そして、Package Explore (パッケージ・エクスプローラー) から、右クリックして New - Other... <em class="keyword">DBFlute Wizards - DBFlute New Client</em>
-		を選択して、画面からDB接続情報などの基本設定を入力し、ボタンでDBFluteをダウンロードして、最後に Finish します。
-	</p>
-	<dl class="longkeymainlist">
-		<dt><a href="../manual/function/helper/emecha/install.html">EMechaのインストール</a></dt><dd>プラグイン更新サイトからインストール</dd>
-		<dt><a href="../manual/function/helper/emecha/newclient/index.html">DBFluteクライアントの新規作成</a></dt><dd>右クリックでウィザード画面を起動してダウンロードと設定</dd>
-	</dl>
-	<p>
-		すると、以下のようなディレクトリが作成されているはずです。
-	</p>
-<pre><span class="codetitle">e.g. DBFluteクライアントとDBFluteモジュールの関係 {exampledb, 1.0.0} @Directory</span><code>
-eclipse-project
- |-dbflute_exampledb   <span class="comment">// DBFluteクライアント</span>
- |  |-dfprop           <span class="comment">// 設定ファイル(DBFluteプロパティ)のディレクトリ</span>
- |  |-log              <span class="comment">// DBFlute自体のログファイルのディレクトリ</span>
- |  |-output           <span class="comment">// SchemaHTMLやHistoryHTMLなどの出力先ディレクトリ</span>
- |  |-playsql          <span class="comment">// ReplaceSchema用のディレクトリ(DDLやテストデータなど)</span>
- |  |-schema           <span class="comment">// DBFluteの内部データを保持するディレクトリ(基本触らない)</span>
- |  |-xxx.bat(sh)      <span class="comment">// あとはバッチやシェルスクリプトなどがいっぱい</span>
- |-mydbflute
-    |-dbflute-1.0.0    <span class="comment">// DBFluteモジュール ※基本的に触らない</span>
-</code></pre>
-	<p>
-		dbflute_xxx を <em class="keyword">DBFluteクライアント</em>、mydbflute を <em class="keyword">DBFluteモジュール</em>
-		と呼びます。この後の説明でも "DBFluteクライアントの..." とあれば、dbflute_xxx ディレクトリ配下のことを示します。
-	</p>
-	<p>
-		ディレクトリが存在しないとか、なんだか失敗していそうであれば、二つのディレクトリを削除して、もう一度やり直してみてください。
-	</p>
-	<h3 id="introway">Javaじゃないとかなら</h3>
-	<p>
-		Eclipseを使っていない環境であれば(そもそもJavaじゃないとか)、GUIだけでセットアップから実行までできる DBFlute Intro がお奨めです。
+		GUIだけでセットアップから実行までできる DBFlute Intro がお奨めです。
 		独立したページで紹介していますのでそちらをご覧ください。
 	</p>
 	<div class="detailpage"><a href="../manual/function/generator/intro/index.html">DBFlute Intro のトップページ</a></div>
+	<h3 id="first">まずはドキュメント自動生成</h3>
 	<p>
-		これ以降このページでは、<em class="keyword">Eclipseで利用するケース</em> で説明をします。
+		そして、まずは気軽に利用できる SchemaHTML や HistoryHTML
+		のドキュメント自動生成から始め、徐々に ReplaceSchema などの環境を整えていくと良いでしょう。
 	</p>
 
-	<h2 id="document">まずは、ドキュメント生成</h2>
-	<h3 id="schemahtml">SchemaHTMLがはじめの第一歩</h3>
-	<p>
-		まずは、SchemaHTML (テーブル定義書) から作ってみると良いでしょう。
-	</p>
-	<p>
-		テーブル定義書が別途あったとしても、物理的なDBからのリバースされたドキュメントということで価値がありますし、カラム名やプロパティ名をコピーするのにも便利です。
-		SchemaHTML を自動生成する手順の中で自然と HistoryHTML (DB変更履歴) も自動生成されていきます。
-	</p>
-	<h3 id="doctask">JDBC, Docタスクで自動生成</h3>
-	<p>
-		Windows環境なら、以下の手順で二つの "DBFluteタスク" を実行します。
-	</p>
-	<p>
-		
-	</p>
-	<dl class="textlist">
-		<dt>バッチを二つ叩く</dt>
-		<dd>
-			Windowsなら、Eclipseで ctrl + shift + R <span class="frm">(リソースの検索)</span> して、<a href="../manual/function/generator/task/jdbc/index.html">jdbc.bat</a>,
-			<a href="../manual/function/generator/task/doc/index.html">doc.bat</a> を叩きます。
-		</dd>
-		<dd>
-			Mac <span class="frm">(Linux含む)</span> なら、コマンドライン <span class="frm">(ターミナルなど)</span> から <a href="../manual/function/generator/task/jdbc/index.html">jdbc.sh</a>,
-			<a href="../manual/function/generator/task/doc/index.html">doc.sh</a> を実行します。
-		</dd>
-		<dd>
-			<span class="frm">※コンソールに BUILD SUCCESSFUL と表示されていれば成功！</span>
-		</dd>
-		<dt>output/doc に出力される</dt>
-		<dd>
-			DBFluteクライアント(dbflute_xxx)の <em class="keyword">output/doc</em>
-			ディレクトリ配下に出力されます。
-		</dd>
-		<dd>
-			SchemaHTMLなら schema-xxx.html, HistoryHTMLなら history-xxx.html
-			です。HistoryHTMLは一番最初は生成されず、DBが変更した後の二回目以降の実行で自動生成されます。
-		</dd>
-	</dl>
-	<h3 id="dbcomment">DBコメントのススメ</h3>
-	<p>
-		SchemaHTMLでは、テーブルやカラムのコメント(いわゆるDBコメント)を抽出して表示します。
-		しっかりと業務的な補足が書いてあると、より充実したドキュメントとなります。
-		多くのERDツールでDBコメントを付与して生成することができますので、ぜひ積極的に利用しましょう。
-	</p>
-	<p>
-		また、DBコメントの中にテーブルやカラムの "別名" (和名、日本語名)を入れておくと良いでしょう。
-		そのとき、コロン区切りで登録しておくと良いです。<span class="frm">(このような形式で出力できるERDツールもあります)</span>
-	</p>
-	<dl class="shortkeymainlist">
-		<dt>別名: 説明</dt><dd>e.g. 会員名称: 会員のフルネーム、姓と名が空白区切り</dd>
-	</dl>
-	<p>
-		そして、DBFluteに対して、デリミタ(区切り文字)がコロンであること、そして、コロンが無かった場合にそれは別名なのか説明なのか？
-		を教えてあげると、DBFluteが別名を認識して SchemaHTML 上で綺麗に表示します。
-	</p>
-	<div class="relatedpage"><a href="../manual/function/genbafit/implfit/aliasdefinition/index.html">別名(和名)の利用</a></div>
-	<p>
-		設定ファイルは、DBFluteクライアント(dbflute_xxx)の dfprop/documentDefinitionMap.dfprop
-		です。EMechaが入っていれば、アイコンが "ヘ音記号" になっています。"#" (シャープ)
-		はコメントマークです。コメントを外してプロパティを設定しましょう。 
-	</p>
-	<dl class="shortkeymainlist">
-		<dt>デリミタの設定</dt><dd>aliasDelimiterInDbComment に : を指定</dd>
-		<dt>デリミタなしの判定</dt><dd>デリミタなしのときは別名なら isDbCommentOnAliasBasis を true に</dd>
-	</dl>
-	<div class="relatedpage"><a href="../manual/reference/dfprop/documentdefinition/index.html">documentDefinitionMap.dfprop</a></div>
-<pre><span class="codetitle">e.g. DBコメントのデリミタをコロンに、デリミタなければ別名で @documentDefinitionMap.dfprop</span><code>
-    <span class="abbreviation">...</span>
-
-    <span class="comment"># /- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-    # o aliasDelimiterInDbComment (NotRequired - Default '')
-    #  If the alias exists in its DB comment like as follows:
-    #    member name : The name of member's full name
-    #  you can use the alias in DBFlute world, java-doc, SchemaHTML...
-    #  DB comment which does not have the delimiter is not treated
-    #  as alias, treated as description (real comment).
-    #  But you can change it by 'isDbCommentOnAliasBasis'.
-    #</span>
-    <span class="point">; aliasDelimiterInDbComment = :</span>
-    <span class="comment"># - - - - - - - - - -/</span>
-
-    <span class="comment"># /- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-    # o isDbCommentOnAliasBasis (NotRequired - Default false)
-    #  Is DB comment on alias basis?
-    #  (Is DB comment alias name when it has no alias delimiter?)
-    #  This property works with 'aliasDelimiterInDbComment'.
-    #</span>
-    <span class="point">; isDbCommentOnAliasBasis = true</span>
-    <span class="comment"># - - - - - - - - - -/</span>
-
-    <span class="abbreviation">...</span>
-</code></pre>
-	<h3 id="afterdoc">その後のドキュメント運用</h3>
-	<dl class="textlist">
-		<dt>バージョン管理システムへコミット</dt>
-		<dd>
-			自動生成されたら、ディベロッパー全員で共有するためにバージョン管理システム(GITやSVNなど)へコミットすると良いでしょう。
-			DBFluteクライアント (dbflute_xxx) と、DBFluteモジュール (mydbflute) ごと一緒にコミットしておきましょう。
-			<span class="frm">(DBFluteクライアントの log ディレクトリのログファイルは ignore 設定にしておくと良いでしょう)</span>
-		</dd>
-		<dt>DBが変更されたらまた叩く</dt>
-		<dd>
-			DB変更されたら、また同じようにJDBCタスク、Docタスクを叩くと SchemaHTML
-			が更新(上書き)されます。そのときのDB変更の差分情報が、HistoryHTMLに追加されます。
-		</dd>
-		<dt>SchemaHTMLをブックマーク</dt>
-		<dd>
-			パッと開いてパッとスキーマ情報を見られるのが SchemaHTML の特徴です。
-			普段よく使っているブラウザのブックマーク(お気に入り)に登録して、すぐに開けるようにしましょう。
-			ディベロッパーにそのように横展開しましょう。
-		</dd>
-		<dt>カラムの定義順やDBコメントの差分</dt>
-		<dd>
-			これはオプションであり、デフォルトでは差分チェックされません。カラムの定義順の調整ができないDBMSもあるのと、DBコメントまで差分にすると差分ノイズになってしまう可能性があるためです。
-		</dd>
-		<dd>
-			差分チェック対象にしたい場合は、documentDefinitionMap.dfprop の isCheckColumnDefOrderDiff や isCheckDbCommentDiff を true に設定します。
-		</dd>
-		<dt>ストアドプロシージャの差分</dt>
-		<dd>
-			こちらもオプションであり、デフォルトでは差分チェックされません。プロシージャを利用するプロジェクトでは有用ですので、そのときは documentDefinitionMap.dfprop の
-			isCheckProcedureDiff を true にすると良いでしょう。<span class="frm">(行数、文字数、ハッシュ値で比較し、変更があったことだけを検知します)</span> 
-		</dd>
-		<dt>マスタデータも差分履歴に</dt>
-		<dd>
-			区分値や固定参照情報などのマスタデータ、VIEWのSQLの中身<span class="frm">(select句の構造は既に差分チェックされますが、SQLの中身はデフォルトではチェックされない)</span>、
-			DB権限やDBMSの設定など、とにかく SQL で抽出できるデータであれば、差分チェック対象にすることができます。
-		</dd>
-		<dd>
-			特に、区分値系のマスタデータの変更はディベロッパーにとってプログラミングする上での大事な情報です。CraftDiff を使って、差分チェック対象にしておくと良いでしょう。
-			<div class="detailpage"><a href="../manual/function/genbafit/projectfit/craftdiff/index.html">現場フィット - CraftDiff</a></div>
-		</dd>
-	</dl>
-
-	<h2 id="replaceschema">ReplaceSchemaで自動化</h2>
-	<h3 id="repsbase">様々な機能の土台となる</h3>
-	<p>
-		ReplaceSchemaは、単に開発DBの環境構築を自動化するだけでなく、テストデータの一元管理や整合性のチェック、運用後のDB変更で活躍するalter文のチェック
-		(AlterCheck) の土台にもなります。
-	</p>
-	<p>
-		ちょっとだけ最初の構築は気を使いますが、一度作ってしまえばあとは横展開するだけです。
-	</p>
-	<h3 id="prepareddl">とにかく、DDLの準備</h3>
-	<p>
-		とにかく、DDLを準備しましょう。
-		ERDツールなどから create table 文が自動生成できると良いです。 
-	</p>
-	<p>
-		そのDDLを、ReplaceSchemaのディレクトリである、DBFluteクライアント(dbflute_xxx)の playsql ディレクトリの replace-schema.sql
-		に転記します。ERDツールから出力するときに直接上書きすると良いでしょう。
-	</p>
-<pre><span class="codetitle">e.g. DBFluteクライアントとDBFluteモジュールの関係 {exampledb, 1.0.0} @Directory</span><code>
-eclipse-project
- |-dbflute_exampledb   <span class="comment">// DBFluteクライアント</span>
- |  |-<span class="abbreviation">...</span>
- |  |-playsql
- |  |  |-<span class="point">replace-schema.sql</span>    <span class="comment">// ここにDDLを出力する</span>
- |  |  |-take-finally.sql      <span class="comment">// この時点ではまだ空っぽ、TakeFinallyで利用</span>
-</code></pre>
-	<p>
-		もし、すでに同じ名前のスキーマ(データベース)がある場合、データもろとも消えちゃってもよろしいでしょうか？
-		(もしくは、DB接続情報で設定されているスキーマとユーザーは作成されていますか？)
-	</p>
-	<p>
-		特に問題なければ、ctrl + shift + R <span class="frm">(リソースの検索)</span> で replace-schema.bat
-		を叩いてください<span class="frm">(Macならコマンドから)</span>。すると、本当にOKかどうか？
-		を聞かれますので、表示されているDB接続先情報などを確認してOKならば、"y" を押して Enter
-		しましょう。最後に BUILD SUCCESSFUL が表示されていれば、DDLが正常に実行された証です。
-	</p>
-	<h3 id="newdata">新規でテストデータを作成</h3>
-	<p>
-		まだこの状態だとデータが空っぽですっからかんなので、アプリは動きません。
-		区分値や固定参照情報などのマスタデータは必要ですし、業務データのテストデータもある程度あったほうが良いでしょう。
-	</p>
-	<p>
-		ReplaceSchema の "データ登録(エクセル)" のページを参考に、テストデータをエクセルファイルで作成して、所定の位置に配置していってください。
-		そして、ReplaceSchema を実行すると、それらデータが登録されるようになります。
-	</p>
-	<div class="detailpage"><a href="../manual/function/generator/task/replaceschema/loadxls.html">ReplaceSchema - データの登録(エクセル)</a></div>
-<pre><span class="codetitle">e.g. エクセルファイルの配置: 会員系テーブルのエクセルファイル @playsql</span><code>
-eclipse-project
- |-dbflute_exampledb   <span class="comment">// DBFluteクライアント</span>
- |  |-<span class="abbreviation">...</span>
- |  |-playsql
- |  |  |-data          <span class="comment">// ReplaceSchemaで登録するデータを配置するディレクトリ</span>
- |  |  |  |-common     <span class="comment">// 本番、結合、開発でも変わらないデータを配置するディレクトリ</span>
- |  |  |  |  |-xls
- |  |  |  |     |-<span class="point">10-master.xls</span>
- |  |  |  |-ut         <span class="comment">// 開発で使うテストデータを配置するディレクトリ</span>
- |  |  |  |  |-xls
- |  |  |  |     |-<span class="point">20-member.xls</span>
- |  |  |  |     |-<span class="point">30-product.xls</span>
- |  |  |-replace-schema.sql
- |  |  |-take-finally.sql
-</code></pre>
-<pre><span class="codetitle">e.g. エクセルファイルの中身: 会員系テーブルのエクセルファイル @xls</span><code>
-|MEMBER_ID|MEMBER_NAME|BIRTHDATE |
-|        1|Stojkovic  |1965/03/03|
-|        2|Savicevic  |          |
-|        3|...        |...       |
-- - - - - - - - - - - - - - - - - -
-<span class="literal">MEMBER</span> / MEMBER_LOGIN / MEMBER_SECURITY <span class="comment">&lt;-- Sheet</span>
-</code></pre>
-	<h3 id="existingdata">既存のテストデータを流用</h3>
-	<p>
-		既存のスキーマに残しておきたいテストデータがある場合は、そのテストデータを LoadDataReverse
-		でエクセル抽出して、そのまま ReplaceSchema で登録するテストデータにしてしまいましょう。
-	</p>
-	<div class="relatedpage"><a href="../manual/function/generator/task/doc/loaddatareverse.html">LoadDataReverse</a></div>
-	<p>
-		documentDefinitionMap.dfprop の loadDataReverseMap
-		のコメントを外し、isReplaceSchemaDirectUse を true にして、ctrl + shift + R <span class="frm">(リソースの検索)</span> で manage.bat
-		を叩いて<span class="frm">(もちろん、Macならコマンドぉー)</span>、コンソールに表示される LoadDataReverse に該当する番号を入力して Enter しましょう。
-	</p>
-<pre><span class="codetitle">e.g. LoadDataReverseで、レコード数を無制限でReplaceSchema直接利用 @documentDefinitionMap.dfprop</span><code>
-    <span class="abbreviation">...</span>
-
-    <span class="comment"># /- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-    # o loadDataReverseMap: (NotRequired - Default map:{})
-    #  You can set LoadDataReverse settings.
-    #  This property is valid when the property 'recordLimit' is set.
-    #  Elements of this map are as below:
-    #   o recordLimit: The limit of records to output. Minus means no limit. (NotRequired - Default '')
-    #   o isReplaceSchemaDirectUse: Does it output the data to playsql directly? (NotRequired - Default false)
-    #   o isOverrideExistingDataFile: Does it output to existing files? (NotRequired - Default false)
-    #   o isSynchronizeOriginDate: Does it synchronize origin date for date adjustment? (NotRequired - Default false)
-    #</span>
-    ; loadDataReverseMap = <span class="keyword">map:</span>{
-        ; recordLimit = -1
-        ; isReplaceSchemaDirectUse = <span class="point">true</span>
-        ; isOverrideExistingDataFile = <span class="literal">false</span>
-        ; isSynchronizeOriginDate = <span class="literal">false</span>
-    }
-    <span class="comment"># - - - - - - - - - -/</span>
-
-    <span class="abbreviation">...</span>
-</code></pre>
-	<p>
-		すると、DBFluteクライアントの playsql/data/ut/reversexls
-		ディレクトリに配下に cyclic-data-[セクション番号]-xxx.xls
-		という名前でデータがダンプされています。この状態で、ReplaceSchema
-		を叩くと、それらエクセルデータも一緒に登録されます。<span class="frm">(ただし、データの微調整が必要になる可能性もあり)</span>
-	</p>
-	
-	<h3 id="naturalhigh">土台ができれば自然とハイレベルに</h3>
-	<p>
-		ひとまずの環境ができました。あとはバージョン管理システムにDBFluteまるごとコミットして、ディベロッパーに更新してもらって ReplaceSchema
-		を叩いてもらえけば<span class="frm">(スキーマとユーザーはあらかじめ作成してもらう必要あり)</span>、開発用DBの環境構築がバッチ一発で完成します。
-		その後、DB変更が発生したら新DDLと修正テストデータをコミットして、また叩き直してもらえば良いのです。
-	</p>
-	<p>
-		また、スキーマとユーザーの作成も自動化することもできます。
-	</p>
-	<div class="detailpage"><a href="../manual/function/generator/task/replaceschema/systemuser.html">ReplaceSchema - システムユーザでの実行</a></div>
-	<p>
-		ReplaceSchemaは、様々な機能を備えています。徹底したテストデータのマネジメント、本番DBと開発DBにズレを生じさせないための AlterCheck
-		など、スムーズで快適なDB変更ライフを送るために、ちょっとずつでいいので現場にフィットするように環境構築していってみてください。
-	</p>
-	<div class="detailpage"><a href="../manual/function/generator/task/replaceschema/index.html">ReplaceSchema</a></div>
-	<dl class="keymainlist">
-		<dt><a href="../manual/function/generator/task/replaceschema/takefinally.html">TakeFinally</a></dt>
-		<dd>ReplaceSchemaのテストデータの業務的整合性チェック</dd>
-		<dt><a href="../manual/function/generator/task/replaceschema/dateadjustment.html">DateAdjustment</a></dt>
-		<dd>ReplaceSchemaの日付データを相対的に動かして登録</dd>
-		<dt><a href="../manual/function/generator/task/doc/loaddatareverse.html">LoadDataReverse</a> <span class="frm">★</span></dt>
-		<dd>画面登録したデータをReplaceSchemaのデータとしてダンプ</dd>
-		<dt><a href="../manual/function/generator/task/replaceschema/altercheck.html">AlterCheck</a></dt>
-		<dd>本番DBへ流す alter 文の整合性をチェック <span class="frm">※前のDB + alter = 最新create</span></dd>
-		<dt><a href="../manual/function/genbafit/projectfit/craftdiff/index.html">CraftDiff</a></dt>
-		<dd>ReplaceSchemaで登録したテストデータの業務的整合性チェック</dd>
-	</dl>
-
-	<h2 id="synccheck">単純に二つのスキーマを比べる</h2>
-	<p>
-		単純に二つのスキーマを比べて差分があるかどうかを調べたいのであれば、SchemaSyncCheck を使うと良いでしょう。
-		仕組みがシンプルなので、様々なシチュエーションで活用できるかと思います。
-	</p>
-	<div class="detailpage"><a href="../manual/function/generator/task/doc/schemasynccheck.html">SchemaSyncCheck</a></div>
-	<p>
-		例えば、もろもろの事情により ReplaceSchema を導入できず AlterCheck が利用できない場合は、SchemaSyncCheck
-		を使って開発DBや結合DB、本番DBなどの差分をチェックすると良いでしょう。
-	</p>
-
-	<h2 id="tutorial">チュートリアルを参考に</h2>
-	<p>
-		DBFluteのもろもろの情報を得るために、チュートリアルのページが参考になります。
-	</p>
-	<ul>
-		<li><a href="../tutorial/architect.html">アーキテクトのためのチュートリアル</a></li>
-		<li><a href="../tutorial/developer.html">ディベロッパーのためのチュートリアル</a></li>
-	</ul>
-
-	<h2 id="jflutelum">jfluteのコラムに注目</h2>
 	<div class="inucolumn">
-		<h3 id="whyalto">なぜ、アルトフルート？</h3>
+		<h2 id="whyalto">なぜ、アルトフルート？</h2>
 		<p>
 			アプリの外側、開発環境や運用の部分を <em class="keyword">ベースパート</em>
 			と捉えて、メロディーではなくベースを奏でるものとしてという感じですね。
