--- a/web/ja/environment/upgrade/migration/index.html
+++ b/web/ja/environment/upgrade/migration/index.html
@@ -42,6 +42,7 @@
 	</p>
 	<h3 id="over100">1.0.0以降</h3>
 	<ul>
+		<li><a href="./migrate125to126.html">DBFlute-1.2.5 から <em class="keyword">1.2.6</em> への移行</a> <span class="frm">*ポイントあり</span></li>
 		<li><a href="./migrate120to121.html">DBFlute-1.2.0 から <em class="keyword">1.2.1</em> への移行</a> <span class="frm">*ポイントあり</span></li>
 		<li><a href="./migrate112to114.html">DBFlute-1.1.2 から <em class="keyword">1.1.4</em> への移行</a> <span class="frm">*ポイントあり</span></li>
 		<li><a href="./migrate111to112.html">DBFlute-1.1.1 から <em class="keyword">1.1.2</em> への移行</a> <span class="frm">*ポイントあり</span></li>
