--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -29,7 +29,7 @@
 
       <div class="release">
         <h2>DBFlute-1.2.6 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2022/05/08</p>
+        <p class="releasedate">2022/05/08</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -67,7 +67,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.2.5 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2021/08/15</p>
+        <p class="releasedate">2021/08/15</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -99,7 +99,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.2.4 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2021/01/01</p>
+        <p class="releasedate">2021/01/01</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -119,7 +119,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.2.3 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2020/05/29</p>
+        <p class="releasedate">2020/05/29</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -137,7 +137,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.2.2 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2020/01/01</p>
+        <p class="releasedate">2020/01/01</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -155,7 +155,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.2.1 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2019/10/20</p>
+        <p class="releasedate">2019/10/20</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -181,7 +181,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.2.0 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2019/05/01</p>
+        <p class="releasedate">2019/05/01</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -215,7 +215,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.1.9 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2019/01/01</p>
+        <p class="releasedate">2019/01/01</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -264,7 +264,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.1.8 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2018/05/19</p>
+        <p class="releasedate">2018/05/19</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -329,7 +329,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.1.7 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2018/04/01</p>
+        <p class="releasedate">2018/04/01</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -356,7 +356,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.1.6 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2018/01/01</p>
+        <p class="releasedate">2018/01/01</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -373,7 +373,7 @@
       </div>
       <div class="release">
         <h2>DBFlute-1.1.5 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2017/11/26</p>
+        <p class="releasedate">2017/11/26</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
