rename to Changelog

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
-	<meta name="keywords" content="DBFlute,ChangeLog,変更点,バグ修正,新機能,履歴,History" />
+	<meta name="keywords" content="DBFlute,Changelog,変更点,バグ修正,新機能,履歴,History" />
 	<style type="text/css" title="currentStyle">@import "../../../css/sub.css";</style>
-	<title>ChangeLog | DBFlute</title>
+	<title>Changelog | DBFlute</title>
 </head>
 <body>
 <div id="container" class="ct-manual">
@@ -24,7 +24,7 @@
 </div>
 
 <div id="content"><!-- __content-start__ -->
-	<h1>ChangeLog</h1>
+	<h1>Changelog</h1>
 	${indexlist}
 
       <div class="release">
