write about migration of JAVA_HOME on _project.sh

--- a/web/ja/environment/upgrade/migration/index.html
+++ b/web/ja/environment/upgrade/migration/index.html
@@ -30,11 +30,17 @@
 	</p>
 	${indexlist}
 
-	<h2 id="changelog">Change Log</h2>
+	<h2 id="changelog">Changelog</h2>
 	<p>
-		DBFluteのバージョンごとの対応課題については ChangeLog を参照。
+		DBFluteのバージョンごとの対応課題については Changelog を参照。
 	</p>
-	<div class="detailpage"><a href="../../changelog/index.html">DBFluteのChangeLog</a></div>
+	<div class="detailpage"><a href="../../changelog/index.html">DBFluteのChangelog</a></div>
+
+	<h2 id="sometimes">時々の移行</h2>
+	<p>
+		時々、DBFluteクライアントの_project.shを見直してみると良いでしょう。
+	</p>
+	<div class="detailpage"><a href="./theme/migrateshelljava.html">移行 _project.shのJAVA_HOME</a></div>
 
 	<h2 id="attention">移行ポイント</h2>
 	<p>
