about gitignore for system-password.txt

--- a/web/ja/tutorial/handson/section01.html
+++ b/web/ja/tutorial/handson/section01.html
@@ -394,7 +394,7 @@ PROJECT_ROOT
 	</dl>
 	<p>
 		ハンズオンの MySQL は、rootのパスワードが "空" であることを想定しているので、特にパスワードファイルを作成する必要はありません。
-		もし違う場合は、パスワードファイルを作成してください。
+		もし違う場合は、パスワードファイルを作成してください。<span class="frm">(パスワードファイルは必ずgitignoreにしましょう)</span>
 	</p>
 	<h4>DBユーザ、テーブル作成DDLの配置</h4>
 	<p>
