--- a/web/ja/manual/function/helper/erflute/howto.html
+++ b/web/ja/manual/function/helper/erflute/howto.html
@@ -50,7 +50,7 @@
 	<dl class="shortkeymainlist">
 		<dt>テーブルの作成</dt><dd>パレットメニューの Table を選択してダイアグラム上へポトり</dd>
 		<dt>テーブルの編集</dt><dd>ダイアグラム上の Table をダブルクリック or 選択して Enter or Space</dd>
-		<dt>テーブルの削除</dt><dd>ダイアグラム上の Table を洗濯して削除ボタン</dd>
+		<dt>テーブルの削除</dt><dd>ダイアグラム上の Table を選択して削除ボタン</dd>
 	</dl>
 	<h3 id="columnoperation">カラムの操作</h3>
 	<p>
@@ -77,8 +77,8 @@
 	<dl class="shortkeymainlist">
 		<dt>ノートの作成</dt><dd>パレットメニューの Note を選択してダイアグラム上へポトり</dd>
 		<dt>ノートの編集</dt><dd>ダイアグラム上の Note をダブルクリック or 選択して Enter or Space</dd>
-		<dt>ノートの関連付け</dt><dd>パレットメニュー上の Note Connection を洗濯して Table と Note を...</dd>
-		<dt>ノートの削除</dt><dd>ダイアグラム上の Note を洗濯して削除ボタン</dd>
+		<dt>ノートの関連付け</dt><dd>パレットメニュー上の Note Connection を選択して Table と Note を...</dd>
+		<dt>ノートの削除</dt><dd>ダイアグラム上の Note を選択して削除ボタン</dd>
 	</dl>
 	<p>
 		ノートは、DBコメントでもないので、DDLには一切反映されず SchemaHTML にも載りませんが、"図上で補足したい"
